Fix fake table alignment in Django 1.4
Keeping Django 1.3 style, and only restoring the padding.
Otherwise, would have to recalculate column sizes to add padding,
and update the `<th>` with the following layout:
`<div class='text'><span>...</span></div><div class="clear"></div>`

--- a/fluent_pages/static/fluent_pages/pagetree/pagetree.css
+++ b/fluent_pages/static/fluent_pages/pagetree/pagetree.css
@@ -79,6 +79,10 @@
 
 /* column layout */
 
+#changelist table.js-tree-header thead th {
+  padding: 2px 5px;  /* restore Django 1.3 padding, in case Django 1.4 is used. */
+}
+
 .jqtree-django ul.tree a.toggler {
   position: absolute;
   left: -6px;
